fixed >DIGIT, added config option EXIT, updated latex glossary usage

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -4,13 +4,13 @@ tlisp.pdf: tlisp.tex tlisp.bib
 	pdflatex tlisp
 	bibtex tlisp
 	makeindex tlisp
-	makeindex tlisp.glo -s nomencl.ist -o tlisp.gls
+	makeindex tlisp.nlo -s nomencl.ist -o tlisp.nls
 	pdflatex tlisp
 	makeindex tlisp
-	makeindex tlisp.glo -s nomencl.ist -o tlisp.gls
+	makeindex tlisp.nlo -s nomencl.ist -o tlisp.nls
 	pdflatex tlisp
 	makeindex tlisp
-	makeindex tlisp.glo -s nomencl.ist -o tlisp.gls
+	makeindex tlisp.nlo -s nomencl.ist -o tlisp.nls
 	pdflatex tlisp
 	pdflatex tlisp
 
@@ -25,6 +25,7 @@ clean:
 	-$(RM) *.ilg
 	-$(RM) *.ind
 	-$(RM) *.lo?
+	-$(RM) *.nl?
 	-$(RM) *.out
 	-$(RM) *.toc
 	-$(RM) *.*~
